[package]
name = "samaritan-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Samaritan 1.5 Heavy/Core NeuroNode"
repository = "https://github.com/arabafenice599rae/Samaritan"

[lib]
name = "samaritan_core"
path = "src/lib.rs"

[dependencies]
anyhow   = { workspace = true }
tokio    = { workspace = true }
tracing  = { workspace = true }
uuid     = { workspace = true }
hex      = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror  = { workspace = true }
bytes      = { workspace = true }
futures    = { workspace = true }

[features]
# Profilo Heavy/Core (default)
default = ["heavy-core"]

heavy-core = []
