[package]
name = "lite-node-demo"
version = "0.1.0"
edition = "2021"
authors = ["Samaritan Collective <collective@samaritan.ai>"]
description = "Demo minimale di nodo Samaritan Lite che usa samaritan-core"
license = "AGPL-3.0-or-later"

[dependencies]
# Runtime async per il main
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }

# Logging strutturato
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

# Dipendenza locale al core (crate libreria)
samaritan-core = { path = "../core" }
