# core/Cargo.toml
# Samaritan 1.5 — Core NeuroNode library
# Versione 1.0.0 — Stato: CANONICO, IMMUTABILE FINO A NUOVA DECISIONE

[package]
name = "samaritan-core"
version = "1.0.0"
edition = "2021"
authors = ["Samaritan Collective <collective@samaritan.ai>"]
description = "Privacy-by-design distributed brain — Heavy/Core reference implementation"
license = "AGPL-3.0-or-later"
repository = "https://github.com/samaritan-ai/samaritan"
keywords = ["ai", "federated-learning", "differential-privacy", "secure-aggregation", "p2p"]
categories = ["science", "cryptography", "network-programming"]
exclude = [".github/", "docs/", "infra/", "sim/"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.profiling]
inherits = "release"
debug = true
lto = false

# ===================================================================
# Feature strategy 2025 — pragmatica e bulletproof
# ===================================================================
[features]
# Build GPU-enabled per default (CUDA + TensorRT se disponibili)
default = ["gpu"]

# Attiva CUDA 12.x + TensorRT 10 (richiede driver e librerie installate)
gpu = ["onnxruntime/cuda", "onnxruntime/tensorrt"]

# Build puro CPU — usato con --no-default-features --features cpu-only
# Nessun conflitto: onnxruntime vede che cuda/tensorrt sono spenti → compila solo CPU
cpu-only = ["onnxruntime/cpu"]

# Feature vuote per futuro (es. experimental, wasm, ecc.)
nightly = []

# ===================================================================
# Dipendenze — versioni esatte, stabili
# ===================================================================
[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
log = "0.4.22"

anyhow = "1.0.89"
thiserror = "1.0.68"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.132"
bincode = "2.0.1"                       # stabile da ottobre 2025

ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
rand = "0.8.5"
zeroize = { version = "1.8.1", features = ["derive"] }

# ONNX Runtime 1.20.0 — default-features = false per controllo totale
onnxruntime = { version = "1.20.0", default-features = false }

# OpenDP 0.9.0 — gold standard per Rényi DP accountant
opendp = "0.9.0"

# Sistema & hardware detection
sysinfo = "0.31.3"
hwloc2 = "0.4.2"

# File system & atomic ops
tokio-util = "0.7.12"
fs2 = "0.4.3"
tempfile = "3.13.0"

# Compressione delta (zstd livello 3 di default)
zstd = "0.13.2"

# Quantizzazione & casting sicuro
half = "2.4.1"
bytemuck = "1.18.0"

# Config YAML
serde_yaml = "0.9.34"

# UUID & hex
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
hex = "0.4.3"

# Regex per PolicyCore
regex = "1.10.6"

# Async trait
async-trait = "0.1.83"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.5.0"

[[bench]]
name = "dp_sgd_per_sample"
harness = false

[[bench]]
name = "onnx_inference"
harness = false
